--- a/HOME.html
+++ b/HOME.html
@@ -388,8 +388,8 @@
              *   예) [1024, 0] 이상일 때는 데스크탑용 대형 배너, 그보다 작으면 모바일용 소형 배너
              *
              * - HOME GPT에서는:
-             *   - sizeMapping_horizontal : 상단/중단의 가로형 배너(TC, MC)에 공통 적용
-             *   - sizeMapping_square     : 오른쪽 MR 박스형 배너에 적용
+             *   - sizeMapping_horizontal     : 상단/중단의 가로형 배너(TC, MC)에 공통 적용
+             *   - sizeMapping_right_square   : 오른쪽 MR 박스형 배너에 적용
              * - 실제 입찰 단계에서 GAM은 이 매핑 정보를 사용해, 뷰포트에 맞는 크리에이티브만 선별하여 노출합니다.
              */
 
@@ -397,14 +397,14 @@
             const sizeMapping_horizontal = googletag.sizeMapping()
                 .addSize([1024, 0], [[1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
                 .addSize([768, 0], [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [2, 1], [1, 1], 'fluid'])
+                .addSize([0, 0], [[336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
                 .build();
 
-            // 0-2. 박스형 배너용 사이즈 매핑 (MR)
-            const sizeMapping_square = googletag.sizeMapping()
-                .addSize([1024, 0], [[300, 600], [336, 280], [2, 1], [1, 1], 'fluid'])
-                .addSize([768, 0], [[336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [2, 1], [1, 1], 'fluid'])
+            // 0-2. 우측 박스형 배너용 사이즈 매핑 (MR)
+            const sizeMapping_right_square = googletag.sizeMapping()
+                .addSize([1024, 0], [[300, 600], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
+                .addSize([768, 0], [[480, 320], [336, 280], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
+                .addSize([0, 0], [[336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
                 .build();
             // ----------------------------------------------------
             
@@ -427,7 +427,7 @@
             // TC_billboard_leaderboard (Eager Load) - sizeMapping_horizontal 적용
             TC_billboard_leaderboard_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1200, 300], [970, 250], [728, 90], [320, 100], [1, 1], 'fluid'],
+                [[1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [728, 90], [320, 100], [320, 50], [1, 1], 'fluid'],
                 'TC_billboard_leaderboard'
             )
                 .defineSizeMapping(sizeMapping_horizontal) 
@@ -441,7 +441,7 @@
             // MC_billboard_rectangle (Lazy Load) - sizeMapping_horizontal 적용
             MC_billboard_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1200, 300], [970, 250], [750, 300], [336, 280], [1, 1], 'fluid'],
+                [[1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_billboard_rectangle'
             )
                 .defineSizeMapping(sizeMapping_horizontal) 
@@ -452,13 +452,13 @@
                 .setTargeting('default_exposure', '') 
                 .addService(googletag.pubads());
 
-            // MR_halfpage_rectangle (Lazy Load) - sizeMapping_square 적용
+            // MR_halfpage_rectangle (Lazy Load) - sizeMapping_right_square 적용
             MR_halfpage_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[300, 600], [336, 280], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 600], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MR_halfpage_rectangle'
             )
-                .defineSizeMapping(sizeMapping_square) 
+                .defineSizeMapping(sizeMapping_right_square) 
                 .setTargeting('div_id', 'MR_halfpage_rectangle')
                 .setTargeting('load_type', 'lazy')           // 사이드바 내 Lazy 로딩 대상
                 .setTargeting('position', 'MR')              // Right(MR) 영역
