--- a/section.html
+++ b/section.html
@@ -155,7 +155,7 @@
              *   - 컨텍스트 타게팅(예: keywords, MIDDLE_CODE_ENG_NM 등)
              *   - 유료/성인/민감 콘텐츠 여부(is_paid_content, has_adult_content, brandsensitive 등)
              */
-            // ▼▼▼ 동적 입력 키-값 복구 ▼▼▼
+            // ▼▼▼ 동적 입력 키-값 ▼▼▼
             googletag.pubads().setTargeting('domain', window.location.hostname);
             googletag.pubads().setTargeting('url', window.location.href);
             googletag.pubads().setTargeting('referer', document.referrer);
@@ -181,7 +181,7 @@
             googletag.pubads().setTargeting('is_paid_content', '동적입력');
             googletag.pubads().setTargeting('has_adult_content', '동적입력');
             googletag.pubads().setTargeting('brandsensitive', '동적입력');
-            // ▲▲▲ 동적 입력 키-값 복구 ▲▲▲
+            // ▲▲▲ 동적 입력 키-값 ▲▲▲
 
             // GAM 이벤트 리스너 추가 (라벨 삽입)
             googletag.pubads().addEventListener('slotRenderEnded', addAdLabel);
@@ -194,24 +194,82 @@
              *   나중에 defineSizeMapping(sizeMapping)으로 슬롯에 적용합니다.
              *
              * - Section GPT에서는:
-             *   - sizeMapping_horizontal : 상단 TC 빌보드(가로형)용
-             *   - sizeMapping_square     : 우측 MR 박스형(하프페이지 등)용
-             * - View, HOME, List GPT 파일과 동일한 사이즈 세트를 사용하여
+             *   - sizeMapping_horizontal   : 상단 TC 빌보드(가로형)용
+             *   - sizeMapping_right_square : 우측 MR 박스형(하프페이지 등)용
+             * - View, HOME, List GPT 파일과 가능한 한 동일한 사이즈 세트를 사용하여
              *   인벤토리/캠페인 운영을 통일했습니다.
              */
 
             // 0-1. 가로형 배너를 위한 사이즈 매핑 (TC 적용)
             const sizeMapping_horizontal = googletag.sizeMapping()
-                .addSize([1024, 0], [[1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
-                .addSize([768, 0], [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [2, 1], [1, 1], 'fluid'])
+                .addSize(
+                    [1024, 0],
+                    [
+                        [1200, 300], [1200, 100],
+                        [970, 250], [980, 120], [970, 90], [930, 180],
+                        [750, 300], [750, 200],
+                        [728, 90],
+                        [2, 1], [1, 1],
+                        'fluid'
+                    ]
+                )
+                .addSize(
+                    [768, 0],
+                    [
+                        [750, 300], [750, 200],
+                        [728, 90],
+                        [480, 320],
+                        [336, 280], [300, 250],
+                        [2, 1], [1, 1],
+                        'fluid'
+                    ]
+                )
+                .addSize(
+                    [0, 0],
+                    [
+                        [336, 280],
+                        [320, 480],
+                        [320, 100], [320, 50],
+                        [300, 250], [250, 250], [200, 200],
+                        [2, 1], [1, 1],
+                        'fluid'
+                    ]
+                )
                 .build();
 
-            // 0-2. 박스형 배너를 위한 사이즈 매핑 (MR 적용)
-            const sizeMapping_square = googletag.sizeMapping()
-                .addSize([1024, 0], [[300, 600], [336, 280], [2, 1], [1, 1], 'fluid'])
-                .addSize([768, 0], [[336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [2, 1], [1, 1], 'fluid'])
+            // 0-2. 우측 박스형 배너를 위한 사이즈 매핑 (MR 적용)
+            const sizeMapping_right_square = googletag.sizeMapping()
+                .addSize(
+                    [1024, 0],
+                    [
+                        [300, 600], [300, 250],
+                        [250, 250], [200, 200],
+                        [2, 1], [1, 1],
+                        'fluid'
+                    ]
+                )
+                .addSize(
+                    [768, 0],
+                    [
+                        [480, 320],
+                        [336, 280],
+                        [320, 100], [320, 50],
+                        [300, 250], [250, 250], [200, 200],
+                        [2, 1], [1, 1],
+                        'fluid'
+                    ]
+                )
+                .addSize(
+                    [0, 0],
+                    [
+                        [336, 280],
+                        [320, 480],
+                        [320, 100], [320, 50],
+                        [300, 250], [250, 250], [200, 200],
+                        [2, 1], [1, 1],
+                        'fluid'
+                    ]
+                )
                 .build();
 
 
@@ -228,11 +286,20 @@
              */
 
             // 5-1. TC_billboard_leaderboard (Eager Load) - sizeMapping_horizontal 적용
-            TC_billboard_leaderboard_slot = googletag.defineSlot(AdUnitPath, [
-                [1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], 
-                [750, 300], [750, 200], [480, 320], [728, 90], [336, 280], [300, 250], 
-                [250, 250], [200, 200], [1, 1], 'fluid'
-            ], 'TC_billboard_leaderboard')
+            TC_billboard_leaderboard_slot = googletag.defineSlot(
+                AdUnitPath,
+                [
+                    [1200, 300], [1200, 100],
+                    [980, 120],
+                    [970, 250], [970, 90],
+                    [930, 180],
+                    [728, 90],
+                    [320, 100], [320, 50],
+                    [1, 1],
+                    'fluid'
+                ],
+                'TC_billboard_leaderboard'
+            )
                 .defineSizeMapping(sizeMapping_horizontal) 
                 .setTargeting('div_id', 'TC_billboard_leaderboard')
                 .setTargeting('position', 'TC')
@@ -242,11 +309,22 @@
                 .addService(googletag.pubads());
 
 
-            // 5-2. MR_halfpage_rectangle (Lazy Load) - sizeMapping_square 적용
-            MR_halfpage_rectangle_slot = googletag.defineSlot(AdUnitPath, [
-                [300, 600], [336, 280], [300, 250], [250, 250], [200, 200], [1, 1], 'fluid'
-            ], 'MR_halfpage_rectangle') // Slot ID는 MR_halfpage_rectangle 유지
-                .defineSizeMapping(sizeMapping_square) 
+            // 5-2. MR_halfpage_rectangle (Lazy Load) - sizeMapping_right_square 적용
+            MR_halfpage_rectangle_slot = googletag.defineSlot(
+                AdUnitPath,
+                [
+                    [480, 320],
+                    [336, 280],
+                    [320, 480],
+                    [320, 100], [320, 50],
+                    [300, 600], [300, 250],
+                    [250, 250], [200, 200],
+                    [2, 1], [1, 1],
+                    'fluid'
+                ],
+                'MR_halfpage_rectangle' // Slot ID는 MR_halfpage_rectangle 유지
+            )
+                .defineSizeMapping(sizeMapping_right_square) 
                 .setTargeting('div_id', 'MR_halfpage_rectangle')
                 .setTargeting('position', 'MR')
                 .setTargeting('ad_area_type', 'ATF')       // 우측 상단 레일(ATF 성격)
@@ -307,9 +385,35 @@
         .nav-list { list-style: none; padding: 0; margin: 0; display: flex; justify-content: flex-start; }
         .nav-list li { padding: 10px 15px; font-weight: bold; border-right: 1px solid #eee; }
         .nav-list li:first-child { color: #c00; }
+
         .content-wrap { display: flex; gap: 20px; margin-bottom: 30px; }
-        .main-content { flex: 3; min-width: 0; }
-        .sidebar { flex: 1; min-width: 280px; background-color: #fff; padding: 20px; box-sizing: border-box; border: 1px solid #ddd; border-radius: 5px; }
+
+        /*
+         * [레이아웃 · 메인/우측 컬럼 비율 조정]
+         * - 우측 사이드바에 가로 300px 소재(300x600, 300x250 등)가 안정적으로 들어가도록
+         *   사이드바 전체 폭을 340px, 내부 콘텐츠 폭을 300px 이상 확보했습니다.
+         *
+         * - .sidebar는 padding: 20px(좌우 합 40px)을 갖기 때문에
+         *   340px - 40px = 300px → 실제 광고 크리에이티브 영역이 정확히 300px 확보됩니다.
+         *
+         * - main-content는 flex: 1 1 auto로 설정하여 나머지 가용 폭을 자연스럽게 차지합니다.
+         * - 반응형(1024px 이하) 구간에서는 .content-wrap이 column으로 전환되므로
+         *   이 고정 폭 설정이 모바일/태블릿 레이아웃에는 영향을 주지 않습니다.
+         */
+        .main-content {
+            flex: 1 1 auto;
+            min-width: 0;
+        }
+
+        .sidebar {
+            flex: 0 0 340px;          /* 사이드바 전체 폭 (패딩 포함) */
+            min-width: 340px;         /* 실제 콘텐츠 폭 300px 이상 확보용 */
+            background-color: #fff;
+            padding: 20px;
+            box-sizing: border-box;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
         
         /*
          * [광고 공통 · .ad-slot 설명]
@@ -450,10 +554,7 @@
                 color: #e0e0e0 !important;
             }
 
-            /* ✅ 광고 라벨 다크 모드 반전 (View / HOME와 동일 정책)
-             * - 밝은 배경 대비용 기본 색(#5A5A5A) → 다크 모드용 조금 더 밝은 회색(#A0A0A0)
-             * - 배경은 transparent 유지 (섹션 레이아웃과 자연스럽게 어울리도록)
-             */
+            /* ✅ 광고 라벨 다크 모드 반전 (View / HOME와 동일 정책) */
             .mk-ad-label { 
                 background-color: transparent; 
                 color: #A0A0A0;   /* 라이트(#5A5A5A) → 다크(#A0A0A0)로 반전 */
