--- a/view.html
+++ b/view.html
@@ -242,29 +242,76 @@
             //
             // - 이 View GPT에서는 세 가지 매핑을 사용합니다.
             //   · sizeMapping_horizontal        : 헤더/빌보드/와이드형 배너용
-            //   · sizeMapping_square            : 사이드 MR(300x600 등)용
-            //   · sizeMapping_horizontal_medium : 본문 in-article 중형 직사각형용
+            //   · sizeMapping_siderail_square   : 우측 사이드 레일 MR(300x600 등)용
+            //   · sizeMapping_article_horizontal: 본문 in-article 및 중형 직사각형용
             //
             // - 중요:
             //   · 여기서 정의한 사이즈는 "허용 후보" 리스트일 뿐,
             //     실제 어떤 사이즈가 집행되는지는 GAM 라인아이템 설정에 따라 달라집니다.
             // ------------------------------------------------------------------
             const sizeMapping_horizontal = googletag.sizeMapping()
-                .addSize([1024, 0], [[1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
-                .addSize([768, 0], [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [2, 1], [1, 1], 'fluid'])
+                .addSize([1024, 0], [
+                    [1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180],
+                    [750, 300], [750, 200], [728, 90],
+                    [2, 1], [1, 1], 'fluid'
+                ])
+                .addSize([768, 0], [
+                    [750, 300], [750, 200], [728, 90],
+                    [480, 320], [336, 280], [300, 250],
+                    [2, 1], [1, 1], 'fluid'
+                ])
+                .addSize([0, 0], [
+                    [336, 280], [320, 480],
+                    [320, 100], [320, 50],
+                    [300, 250], [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
                 .build();
 
-            const sizeMapping_square = googletag.sizeMapping()
-                .addSize([1024, 0], [[300, 600], [336, 280], [2, 1], [1, 1], 'fluid'])
-                .addSize([768, 0], [[336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [2, 1], [1, 1], 'fluid'])
+            const sizeMapping_siderail_square = googletag.sizeMapping()
+                .addSize([1024, 0], [
+                    [336, 280], [300, 600], [300, 250], [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
+                .addSize([768, 0], [
+                    [480, 320], [336, 280],
+                    [320, 100], [320, 50],
+                    [300, 250], [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
+                .addSize([0, 0], [
+                    [336, 280], [320, 480],
+                    [320, 100], [320, 50],
+                    [300, 250], [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
                 .build();
 
-            const sizeMapping_horizontal_medium = googletag.sizeMapping()
-                .addSize([1024, 0], [[480, 320], [336, 280], [300, 250], [250, 250], [320, 100], [320, 50], [2, 1], [1, 1], 'fluid'])
-                .addSize([768, 0], [[480, 320], [336, 280], [300, 250], [300, 251], [300, 252], [300, 253], [300, 254], [300, 255], [300, 256], [300, 257], [300, 258], [250, 250], [320, 100], [320, 50], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [2, 1], [1, 1], 'fluid'])
+            const sizeMapping_article_horizontal = googletag.sizeMapping()
+                .addSize([1024, 0], [
+                    [480, 320], [336, 280],
+                    [320, 100], [320, 50],
+                    [300, 250],
+                    [300, 251], [300, 252], [300, 253], [300, 254], [300, 255], [300, 256], [300, 257], [300, 258],
+                    [250, 250],
+                    [2, 1], [1, 1], 'fluid'
+                ])
+                .addSize([768, 0], [
+                    [480, 320], [336, 280],
+                    [320, 100], [320, 50],
+                    [300, 250],
+                    [300, 251], [300, 252], [300, 253], [300, 254], [300, 255], [300, 256], [300, 257], [300, 258],
+                    [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
+                .addSize([0, 0], [
+                    [336, 280], [320, 480],
+                    [320, 100], [320, 50],
+                    [300, 250],
+                    [300, 251], [300, 252], [300, 253], [300, 254], [300, 255], [300, 256], [300, 257], [300, 258],
+                    [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
                 .build();
 
             // ------------------------------------------------------------------
@@ -310,9 +357,12 @@
             // ------------------------------------------------------------------
             if (deviceCategory === 'desktop') {
                 TC_billboard_X_slot = googletag.defineSlot(AdUnitPath, [
-                    [1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180],
-                    [750, 300], [750, 200], [480, 320], [728, 90], [336, 280], [300, 250],
-                    [250, 250], [200, 200], [1, 1], 'fluid'
+                    [1200, 300], [1200, 100],
+                    [980, 120], [970, 250], [970, 90], [930, 180],
+                    [750, 300], [750, 200],
+                    [480, 320], [728, 90],
+                    [320, 100], [320, 50],
+                    [1, 1], 'fluid'
                 ], 'TC_billboard_X')
                     .defineSizeMapping(sizeMapping_horizontal)
                     .setTargeting('div_id', 'TC_billboard_X')
@@ -338,9 +388,10 @@
             // ------------------------------------------------------------------
             if (deviceCategory === 'desktop') {
                 MR_side_rail_X_slot = googletag.defineSlot(AdUnitPath, [
-                    [300, 600], [336, 280], [300, 250], [250, 250], [200, 200], [1, 1], 'fluid'
+                    [336, 280], [300, 600], [300, 250], [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
                 ], 'MR_side_rail_X')
-                    .defineSizeMapping(sizeMapping_square)
+                    .defineSizeMapping(sizeMapping_siderail_square)
                     .setTargeting('div_id', 'MR_side_rail_X')
                     .setTargeting('position', 'MR')
                     .setTargeting('ad_area_type', 'ATF')
@@ -362,7 +413,7 @@
             //     해당 슬롯이 뷰포트 근처에 도달했을 때 발생합니다.
             //
             // - 사이즈 정책:
-            //   · sizeMapping_horizontal_medium을 공통 사용합니다.
+            //   · sizeMapping_article_horizontal을 공통 사용합니다.
             //   · 일부 슬롯은 300x251, 252, 253, ... 처럼
             //     개별 라인아이템/캠페인을 구분할 수 있도록
             //     약간씩 다른 사이즈를 포함합니다.
@@ -372,10 +423,10 @@
             // ------------------------------------------------------------------
             MC_article_rectangle_1_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [300, 251], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 251], [250, 250], [200, 200], [1, 1], 'fluid'],
                 'MC_article_rectangle_1'
             )
-                .defineSizeMapping(sizeMapping_horizontal_medium)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'MC_article_rectangle_1')
                 .setTargeting('position', 'MC')
                 .setTargeting('ad_area_type', 'in_article')
@@ -385,10 +436,10 @@
 
             MC_article_rectangle_2_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [300, 252], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 252], [250, 250], [200, 200], [1, 1], 'fluid'],
                 'MC_article_rectangle_2'
             )
-                .defineSizeMapping(sizeMapping_horizontal_medium)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'MC_article_rectangle_2')
                 .setTargeting('position', 'MC')
                 .setTargeting('ad_area_type', 'in_article')
@@ -398,10 +449,10 @@
 
             MC_article_rectangle_3_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [300, 253], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 253], [250, 250], [200, 200], [1, 1], 'fluid'],
                 'MC_article_rectangle_3'
             )
-                .defineSizeMapping(sizeMapping_horizontal_medium)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'MC_article_rectangle_3')
                 .setTargeting('position', 'MC')
                 .setTargeting('ad_area_type', 'in_article')
@@ -411,10 +462,10 @@
 
             MC_article_rectangle_4_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [300, 254], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 254], [250, 250], [200, 200], [1, 1], 'fluid'],
                 'MC_article_rectangle_4'
             )
-                .defineSizeMapping(sizeMapping_horizontal_medium)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'MC_article_rectangle_4')
                 .setTargeting('position', 'MC')
                 .setTargeting('ad_area_type', 'in_article')
@@ -424,10 +475,10 @@
 
             MC_article_rectangle_5_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [300, 255], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 255], [250, 250], [200, 200], [1, 1], 'fluid'],
                 'MC_article_rectangle_5'
             )
-                .defineSizeMapping(sizeMapping_horizontal_medium)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'MC_article_rectangle_5')
                 .setTargeting('position', 'MC')
                 .setTargeting('ad_area_type', 'in_article')
@@ -437,10 +488,10 @@
 
             MC_article_rectangle_6_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [300, 256], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 256], [250, 250], [200, 200], [1, 1], 'fluid'],
                 'MC_article_rectangle_6'
             )
-                .defineSizeMapping(sizeMapping_horizontal_medium)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'MC_article_rectangle_6')
                 .setTargeting('position', 'MC')
                 .setTargeting('ad_area_type', 'in_article')
@@ -450,10 +501,10 @@
 
             MC_article_rectangle_7_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [300, 257], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 257], [250, 250], [200, 200], [1, 1], 'fluid'],
                 'MC_article_rectangle_7'
             )
-                .defineSizeMapping(sizeMapping_horizontal_medium)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'MC_article_rectangle_7')
                 .setTargeting('position', 'MC')
                 .setTargeting('ad_area_type', 'in_article')
@@ -463,10 +514,10 @@
 
             MC_article_rectangle_8_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [300, 258], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 258], [250, 250], [200, 200], [1, 1], 'fluid'],
                 'MC_article_rectangle_8'
             )
-                .defineSizeMapping(sizeMapping_horizontal_medium)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'MC_article_rectangle_8')
                 .setTargeting('position', 'MC')
                 .setTargeting('ad_area_type', 'in_article')
@@ -479,7 +530,7 @@
             // ------------------------------------------------------------------
             const BC_byline_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [300, 250], [250, 250], [320, 100], [320, 50], 'fluid'],
+                [[480, 320], [336, 280], [320, 480], [300, 250], [250, 250], [200, 200], [320, 100], [320, 50], [1, 1], 'fluid'],
                 'BC_byline_rectangle'
             )
                 .defineSizeMapping(sizeMapping_horizontal)
@@ -495,7 +546,15 @@
             // ------------------------------------------------------------------
             const BC_billboard_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1200, 300], [970, 250], [980, 120], [970, 90], [930, 180], [750, 300], [750, 200], [480, 320], [728, 90], 'fluid'],
+                [
+                    [1200, 300], [1200, 100],
+                    [980, 120], [970, 250], [970, 90], [930, 180],
+                    [750, 300], [750, 200], [728, 90],
+                    [480, 320], [336, 280], [320, 480],
+                    [300, 250], [250, 250], [200, 200],
+                    [320, 100], [320, 50],
+                    [1, 1], 'fluid'
+                ],
                 'BC_billboard_rectangle'
             )
                 .defineSizeMapping(sizeMapping_horizontal)
@@ -509,29 +568,31 @@
             // 5-13, 5-14. BC_native_list_1/2 (Lazy Load, 인기뉴스 영역 Native)
             //
             // - 이 슬롯들은 'native-ad-list-item' LI 안에서 사용됩니다.
-            // - size는 [1,1] 또는 [2,1], 'fluid' 등으로 설정되어 있으며
+            // - size는 [320,100], [320,50]에
+            //   [1,1] / [2,1], 'fluid' 등이 포함되며,
             //   실제 레이아웃은 추천 위젯/JS에 의해 렌더링됩니다.
             // ------------------------------------------------------------------
             const BC_native_list_1_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1, 1], 'fluid'],
+                [[320, 100], [320, 50], [1, 1], 'fluid'],
                 'BC_native_list_1'
             )
                 .setTargeting('div_id', 'BC_native_list_1')
                 .setTargeting('position', 'BC')
                 .setTargeting('ad_area_type', 'below_popular_news')
-                .setTargeting('default_exposure', '')
+                .setTargeting('default_exposure', 'hidden')
                 .setTargeting('load_type', 'lazy')
                 .addService(googletag.pubads());
 
             const BC_native_list_2_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[2, 1], 'fluid'],
+                [[320, 100], [320, 50], [2, 1], 'fluid'],
                 'BC_native_list_2'
             )
                 .setTargeting('div_id', 'BC_native_list_2')
                 .setTargeting('position', 'BC')
                 .setTargeting('ad_area_type', 'below_popular_news')
+                .setTargeting('default_exposure', 'hidden')
                 .setTargeting('load_type', 'lazy')
                 .addService(googletag.pubads());
 
@@ -1290,7 +1351,7 @@
                     });
                 }
 
-            if (isShortArticle && lastContentBlock) return;
+                if (isShortArticle && lastContentBlock) return;
             }
 
             // ---- 일반 기사 케이스 ----
