--- a/HOME.html
+++ b/HOME.html
@@ -73,7 +73,8 @@
          *   1) "슬롯의 폭"은 부모 컨테이너(메인 영역/사이드바/전체 컨테이너)의 폭을 100% 사용
          *      → 광고 크기 제약은 GAM sizeMapping과 상위 레이아웃(예: .sidebar min-width)에서 제어
          *   2) height/min-height를 강제하지 않고, 실제 크리에이티브/iframe 높이에 맡김
-         *      → collapseEmptyDivs(true)와 결합해 광고가 없을 때 불필요한 공백을 남기지 않음
+         *      → PageSettingsConfig.collapseDiv = 'BEFORE_FETCH'와 결합해
+         *        광고가 없을 때 불필요한 공백을 남기지 않음
          *   3) 라벨(Advertisement)이 들어갈 상단 여백만 padding-top으로 최소한 확보
          *
          * - View GPT와의 차이/유사점:
@@ -409,7 +410,7 @@
             googletag.pubads().setTargeting('brandsensitive', '동적입력');
             // ▲▲▲ 동적 입력 키-값 ▲▲▲
 
-            // --- [3] GPT 핵심 기능 설정 ---
+            // --- [3] GPT 핵심 기능 설정 (PageSettingsConfig 기반) ---
             /*
              * [공통 · GAM 핵심 API 설명]
              * 1) googletag.defineSlot(adUnitPath, sizeArray, divId)
@@ -418,46 +419,40 @@
              *      이후 defineSizeMapping으로 뷰포트별 실제 노출 사이즈를 제어합니다.
              *
              * 2) googletag.pubads()
-             *    - Publisher Ads Service 객체로, 대부분의 공통 설정(타게팅, SRA, 콜랩스 등)을 이 레벨에서 수행합니다.
+             *    - Publisher Ads Service 객체로, 대부분의 공통 설정(타게팅, SRA 등)을 이 레벨에서 수행합니다.
              *
              * 3) enableSingleRequest()
              *    - SRA(Single Request Architecture)를 활성화합니다.
              *    - 한 페이지의 모든 슬롯을 하나의 네트워크 요청으로 묶어 호출하여
              *      레이턴시를 줄이고, 라인 아이템 간 경쟁/우선순위를 일관되게 평가하도록 합니다.
              *
-             * 4) collapseEmptyDivs(true)
-             *    - 라인 아이템이 없거나 노출되지 않는 슬롯에 대해, 해당 div를 자동으로 숨깁니다.
-             *    - true로 설정 시, 빈 슬롯에 대한 높이/공백을 줄여 레이아웃 안정성을 높일 수 있습니다.
-             *    - 다만, 일부 슬롯은 항상 공간을 유지해야 할 수 있어, 필요 시 스타일로 최소 높이를 지정할 수 있습니다.
+             * 4) PageSettingsConfig.collapseDiv
+             *    - 예전 collapseEmptyDivs(...)의 신규 버전(권장 방식)입니다.
+             *    - collapseDiv: 'BEFORE_FETCH' 설정 시,
+             *      슬롯은 처음에는 접힌 상태로 시작하고, 광고가 반환되면 확장됩니다.
+             *      → 기존 collapseEmptyDivs(true)와 동등한 동작.
              *
              * 5) disableInitialLoad()
              *    - 페이지 로드 시점에 자동으로 광고 요청을 보내지 않도록 차단합니다.
              *    - 이후 개발자가 display() + refresh()를 호출하는 시점에서만 요청이 발생하며,
              *      이 패턴이 Lazy Load/뷰포트 기반 로딩의 핵심 전제 조건이 됩니다.
              *
-             * 6) googletag.setConfig({ centering: true })
-             *    - (권장) PageSettingsConfig.centering을 통해 모든 슬롯의 가로 정렬을 중앙으로 설정합니다.
-             *    - 기존 PubAdsService.setCentering(true)는 지원 중단(Deprecated) 상태이므로,
-             *      View / HOME / Section / List GPT 전반에서 setConfig를 사용하는 패턴으로 통일하는 것이 좋습니다.
-             *    - 이미 .ad-slot이 flex 중앙 정렬이지만, 크리에이티브 크기가 슬롯보다 작을 때
-             *      GPT 레벨에서도 중앙 정렬을 보장해 주어 레이아웃 안정성이 올라갑니다.
+             * 6) PageSettingsConfig.centering
+             *    - 작은 사이즈의 광고가 큰 div 안에 들어갈 때, 중앙 정렬되도록 합니다.
+             *    - HOME/VIEW 모두 크기가 다양한 배너를 하나의 슬롯에 집행하는 경우가 많기 때문에,
+             *      화면 균형 측면에서 유용한 옵션입니다.
              */
 
-            // ✅ 전역 Centering 설정 (PageSettingsConfig 기반)
-            googletag.setConfig({ centering: true });
-
             googletag.pubads().enableSingleRequest();
-            googletag.pubads().collapseEmptyDivs(true);
-            // (구 방식) googletag.pubads().setCentering(true);  → setConfig({ centering: true })로 대체
             googletag.pubads().setPublisherProvidedId('PPID_DYNAMIC_HASHED_ID (SERVER_HASHED_ID)');
-            
-            // 🛑 전역 초기 로드 비활성화 (요청사항)
-            // - disableInitialLoad() 이후에는, 모든 슬롯이 기본적으로 "대기 상태"가 됩니다.
-            // - 이 파일에서는:
-            //   - TC_billboard_leaderboard : BODY 영역에서 즉시 display + refresh (Eager Load)
-            //   - MC_billboard_rectangle, MR_halfpage_rectangle : 아래 Lazy Load 로직에서 display + refresh
             googletag.pubads().disableInitialLoad(); 
 
+            // ✅ PageSettingsConfig: centering + collapseDiv 전역 설정
+            googletag.setConfig({
+                centering: true,             // 수평 가운데 정렬
+                collapseDiv: 'BEFORE_FETCH'  // collapseEmptyDivs(true)와 동등한 동작
+            });
+            
             // ✅ GAM 이벤트 리스너 추가 (라벨)
             googletag.pubads().addEventListener('slotRenderEnded', addAdLabel);
 
@@ -478,7 +473,7 @@
             const sizeMapping_horizontal = googletag.sizeMapping()
                 .addSize([1024, 0], [[1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
                 .addSize([768, 0], [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
+                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [320, 50], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
                 .build();
 
             // 0-2. 우측 박스형 배너용 사이즈 매핑 (MR)
