--- a/HOME.html
+++ b/HOME.html
@@ -31,7 +31,7 @@
          *
          * - 목적:
          *   1) 데스크탑에서 우측 사이드바 내 300px 폭 광고(300x250, 300x600 등)가
-         *      잘리지 않고 온전히 노출되도록 "콘텐츠 영역 폭"을 보장
+         *      잘리지 않고 온전히 노출되도록 "사이드바 영역 폭"을 보장
          *   2) 모바일/태블릿에서는 우측 컬럼이 메인 아래로 내려가면서 폭 100%를 사용하도록 설정
          *
          * - View GPT의 .related-area 전략:
@@ -39,9 +39,8 @@
          *   - 모바일/태블릿: width: 100%로 전환
          *
          * - HOME GPT의 .sidebar 전략:
-         *   - padding: 20px(좌우 합 40px)을 고려하여,
-         *     300px 크리에이티브를 위해 실제 사이드바 전체 폭을 최소 340px로 확보
-         *     → 340px - 40px(패딩) = 300px 콘텐츠 영역
+         *   - 외곽 padding을 0으로 두고, 전체 컨테이너 폭을 340px로 고정
+         *     → 300x600 / 300x250 소재를 여유 있게 수용(좌우 잘림 방지)
          *   - 데스크탑(≥1025px): flex: 0 0 340px; min-width: 340px
          *   - 모바일/태블릿(≤1024px): width: 100%; flex: 1 1 auto; min-width: 0;
          *
@@ -55,10 +54,14 @@
         }
 
         .sidebar {
-            /* 폭/플렉스 전략은 미디어쿼리에서 분기
-               - 여기서는 배경/패딩/공통 박스 스타일만 정의 */
+            /* 
+             * [사이드바 공통 스타일]
+             * - 광고 수익 테스트를 위해 외곽 padding을 0으로 설정
+             * - 우측 레일 전체 폭(340px) 안에서 광고/콘텐츠를 최대한 넓게 쓰기 위함
+             * - 텍스트/콘텐츠 여백이 필요하면 .sidebar-item 등 내부 요소에서 padding을 부여
+             */
             background-color: #fff;
-            padding: 20px;
+            padding: 0;                 /* 🔧 기존 20px → 0으로 변경 */
             box-sizing: border-box;
             border-radius: 5px;
         }
@@ -209,12 +212,12 @@
 
         /* ------------------------------
            데스크탑 레이아웃 (>= 1025px)
-           - 우측 사이드바 340px 확보 (패딩 포함)
-           - 내부 콘텐츠 영역은 300px 이상 확보 → 300x600/300x250 안전 노출
+           - 우측 사이드바 340px 컨테이너 폭 확보
+           - 300x600/300x250 등 세로형 광고를 수용하기에 충분한 폭 보장
         ------------------------------ */
         @media (min-width: 1025px) {
             .sidebar {
-                flex: 0 0 340px;   /* 전체 폭 340px (padding 20px * 2 포함) */
+                flex: 0 0 340px;   /* 전체 폭 340px (외곽 padding 0 기준) */
                 min-width: 340px;  /* 최소 폭 보장 */
             }
         }
