--- a/section.html
+++ b/section.html
@@ -400,14 +400,15 @@
          *
          * - 목표:
          *   1) 데스크탑에서 우측 사이드바 내 300px 폭 광고(300x250, 300x600 등)가
-         *      잘리지 않고 온전히 노출되도록 "콘텐츠 영역 폭"을 보장
+         *      잘리지 않고 온전히 노출되도록 "사이드바 영역 폭"을 보장
          *   2) 모바일/태블릿에서는 우측 컬럼이 메인 아래로 내려가며 폭 100% 사용
          *
          * - 전략:
          *   - .main-content : flex: 1 1 auto; → 남는 영역을 유연하게 차지
          *   - .sidebar      : 
          *       · 데스크탑(≥1025px): flex: 0 0 340px; min-width: 340px
-         *          → padding 20px * 2를 고려하면 내부 콘텐츠 영역은 300px 확보
+         *          → padding 0 기준으로 레일 전체 폭을 340px 확보
+         *            (300x600 / 300x250 소재가 여유 있게 들어갈 수 있는 폭)
          *       · 모바일/태블릿(≤1024px): width:100%; flex:1 1 auto; min-width:0
          *          → 폭 100%를 사용하며, min-width 제약 제거
          *
@@ -421,10 +422,15 @@
         }
 
         .sidebar {
-            /* 폭/플렉스는 미디어쿼리에서 분기하고,
-               여기서는 박스 스타일(배경/패딩/테두리)만 정의 */
+            /* 
+             * [사이드바 공통 스타일]
+             * - 외곽 컨테이너에는 padding을 두지 않고, 폭만 340px 기준으로 확보합니다.
+             * - 텍스트/콘텐츠 여백은 .sidebar-box 등 내부 요소에서 padding으로 제어합니다.
+             * - 광고 슬롯(.ad-slot)은 사이드바 폭(340px)을 그대로 활용하여,
+             *   300x600 / 300x250 등의 소재가 잘리지 않도록 합니다.
+             */
             background-color: #fff;
-            padding: 20px;
+            padding: 0;                 /* 🔧 기존 20px → 0으로 변경 */
             box-sizing: border-box;
             border: 1px solid #ddd;
             border-radius: 5px;
@@ -610,8 +616,8 @@
 
         /* ------------------------------
            데스크탑 레이아웃 (>= 1025px)
-           - 우측 사이드바 340px 확보 (패딩 포함)
-           - 내부 콘텐츠 영역은 300px 이상 확보 → 300x600/300x250 안전 노출
+           - 우측 사이드바 컨테이너 폭 340px 확보 (padding 0 기준)
+           - 300x600/300x250 등 세로형 광고가 잘리지 않도록 레일 폭을 여유 있게 확보
         ------------------------------ */
         @media (min-width: 1025px) {
             .sidebar {
